alignment fix

--- a/src/styles/writersForum.scss
+++ b/src/styles/writersForum.scss
@@ -91,6 +91,9 @@
 }
 
 @media (max-width :800px) {
+  .flex-col{
+    flex-direction: column;
+  }
   #writersForum {
     flex-direction: column;
     align-items: center;
